Edited text header in todo list page

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
     <h2 id="welcome-user"></h2>
 
-    <h2>Jake's to-Do List</h2>
+    <h2>To-Do List</h2>
 
     <form action="/todos" method="post">
         <input type="text" name="title" required placeholder="Enter a new task">
